--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,13 +1,10 @@
 ---
-# ansible_default_ipv6: {}
-# ansible_default_ipv4: {}
-
 # By default we enable an IP protocol if there is a default configuration
 # for it on the host. You can override this to explicitly disable a protocol.
 # Because there are two protocols, and you have to have at least one,
 # there are three valid combinations: IPv4+IPv6, IPv4 only, or IPv6 only.
-wg_ipv6_enable: "{{ ansible_all_ipv6_addresses | default([]) | length > 0 | bool }}"
-wg_ipv4_enable: "{{ ansible_all_ipv4_addresses | default([]) | length > 0 | bool }}"
+wg_ipv6_enable: "{{ ansible_default_ipv6 | default({}) | length > 0 | bool }}"
+wg_ipv4_enable: "{{ ansible_default_ipv4 | default({}) | length > 0 | bool }}"
 
 # Establish uplink interface names (eth0, ens3, etc)
 wg_uplink_iface_ipv6: "{{ ansible_default_ipv6.interface if wg_ipv6_enable | bool else 'undef' }}"
@@ -23,7 +20,13 @@ wg_uplink_addresses: "{{ ([ansible_default_ipv6.address] if wg_ipv6_enable | boo
   | ansible.utils.ipaddr | sort(reverse=True) }}"
 
 wg_tunnel_iface: wg0
-wg_port: 51820
+
+# Which port to use on the server
+wg_server_port: 51820
+# Which port to use in client profile. This can be useful in NAT scenarios where
+# you can map a different public port to the internal server. The default is to
+# keep them the same
+wg_public_port: "{{ wg_server_port }}"
 
 # The first IP addresses of these prefixes will be the server's addresses
 # All subsuquent IPs will be for clients
@@ -32,11 +35,21 @@ wg_tunnel_prefix_ipv4: 10.99.99.0/24
 
 wg_tunnel_prefixes: "{{ ([wg_tunnel_prefix_ipv6] if wg_ipv6_enable | bool else []) | union(
                         ([wg_tunnel_prefix_ipv4] if wg_ipv4_enable | bool else [])) | sort(reverse=True) }}"
+wg_tunnel_addresses: "{{ wg_tunnel_prefixes | map('ansible.utils.ipaddr', '1') }}"
+# Resolver address. This is only relevant for the client profiles.
+# What to pick here depends on the scenario:
+# The server's tunnel IP; when running an Adguard/Pihole/etc resolver on the same host
+# wg_resolver: "{{ wg_tunnel_prefixes | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') | first }}"
+# The server's default resolver; for hosts that are directly connected to the internet
+wg_resolver: "{{ ansible_dns.nameservers[0] }}"
 
-# Default: the tunnel server's IP address
-wg_resolver: "{{ wg_tunnel_prefixes | ansible.utils.ipaddr('1') | ansible.utils.ipaddr('address') | first }}"  # the server's tunnel IP
 
-wg_hostname: vpn.foo.bar  # What clients will be connecting to
+# What clients should be connecting to. For systems behind NAT, this is the NAT
+# gateway's public IP address or FQDN. This requires a port to be mapped/forwarded.
+# wg_hostname: vpn.foo.bar
+# For public hosts, you can use the default IP address (default IPv4)
+wg_hostname: "{{ ansible_default_ipv4.address if wg_ipv4_enable | bool else ansible_default_ipv6.address | ansible.utils.ipwrap}}"
+
 wg_name: "{{ wg_hostname }}"  # How the server name is displayed in client apps
 
 wg_config_dir: /etc/wireguard
