--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -122,9 +122,9 @@ wg_clients: [] # store this in a vaulted file
 #     preshared_key: Mdu2caAWNC9WEp4j5SKHNo36iIDuL4LsMPF+3K2Wxwc=
 
 # Display client profiles
-wg_diplay_profiles: false
-# wg_diplay_profiles: qr
-# wg_diplay_profiles: text
+wg_display_profiles: false
+# wg_display_profiles: qr
+# wg_display_profiles: text
 
 # Whether to export all profiles to a local ZIP file
 # Also needs to set the path to it
